<resources>
    <string name="app_name">Hill data</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Signin">Sign in</string>
    <string name="Signup">Sign up</string>
    <string name="email">Email address</string>
    <string name="password">Password </string>
    <string name="username">Username</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="register">Register</string>
    <string name="backToSignin">Already a member? Sign in!</string>
    <string name="resetPassword"> Request Password</string>
    <string name="forgotPWDescrip">Please enter your registered email address to send you password reset instructions.</string>
    <string name="forgotBacktoLogin">Back to sign in!</string>
    <string name="addHillFort">Add Hill fort</string>
    <string name="hint_HillfortName">Hill fort name</string>
    <string name="hint_hillfortDescription">Description</string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="enter_hillfort_name">Please Enter a hillfort name</string>
    <string name="save_hillfort">Save</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="change_hillfort_image">Upload another image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="delete_hilfort">Delete Hillfort</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_hillfort_maps">Map of All Hillforts</string>
    <string name="hillfort_image_placeholder">Hillfort Imagee</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>
    <string name="title_activity_hillfort_list">Hillfort</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="title_activity_edit_location">Hillfort</string>
</resources>
