<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addHillfort"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_list_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_list_logout"
        android:title="@string/log_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_addHillfort"
        app:showAsAction="always"/>

</menu>