<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".activities.SettingsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:src="@drawable/applogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="32dp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:paddingBottom="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            />

        <EditText
            android:id="@+id/settingUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_background"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:paddingTop="20dp"
            />

        <EditText
            android:id="@+id/settingEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_background"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:paddingTop="20dp"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            />

        <EditText
            android:id="@+id/settingPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_background"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/totalUserHillforts"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/hillfortsVisited"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/totalPictures"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/totalUsers"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/totalHillforts"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="Save Changes"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:textAllCaps="false"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/btnBackToList"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back to Hillforts"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/deleteUserBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/delbutton_background"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="Delete Account"
            android:textColor="@color/lightText"
            android:textAllCaps="false"
            android:textSize="20sp"/>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>