<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.hillfort.HillfortView"
    android:background="@drawable/login_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:background="@drawable/login_background"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                app:titleTextColor="@color/colorAccent"/>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hillfortImages"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>



                <EditText
                    android:id="@+id/hillfortName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:background="@drawable/login_edit_background"
                    android:hint="@string/hint_HillfortName"
                    android:inputType="text"
                    android:maxLength="140"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_hillfortDescription"
                    android:background="@drawable/login_edit_background"
                    android:inputType="text"
                    android:maxLength="300"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="Additional Notes"
                    android:background="@drawable/login_edit_background"
                    android:inputType="textMultiLine"
                    android:maxLength="300"
                    android:maxLines="10"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/lngText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Longitude: "
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/latText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Latitude: "
                    android:layout_gravity="center"
                    />

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/button_background"
                    android:paddingBottom="8dp"
                    android:textAllCaps="false"
                    android:paddingTop="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/lightText"
                    android:textSize="20sp"/>
                
                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="378dp"
                    android:layout_height="198dp"
                    android:layout_margin="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Visited?"
                    android:layout_gravity="center"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/dateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date"
                    android:layout_gravity="center"
                    />

                <Button
                    android:id="@+id/btnDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/button_background"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="Visit / Visited Date"
                    android:textColor="@color/lightText"
                    android:textAllCaps="false"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-thin"
                    android:text="RateHillfort"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
                <RatingBar
                    android:id="@+id/hillfortRatingBar"
                    android:layout_width="240dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1" />

                <Button
                    android:id="@+id/deleteHillfortBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/delbutton_background"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/delete_hilfort"
                    android:textColor="@color/lightText"
                    android:textAllCaps="false"
                    android:visibility="invisible"
                    android:textSize="20sp"/>

            </LinearLayout>


        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>